fix: wrap

--- a/themes/hello-friend/assets/css/style.css
+++ b/themes/hello-friend/assets/css/style.css
@@ -482,7 +482,7 @@ html {
 body {
 	margin: 0;
 	padding: 0;
-	font-family: -apple-system,BlinkMacSystemFont,'Helvetica Neue',Helvetica,Arial,'PingFang SC','Hiragino Sans GB','Microsoft YaHei','WenQuanYi Micro Hei','Segoe UI',Helvetica,Arial,sans-serif,serif;
+	font-family: -apple-system,BlinkMacSystemFont,'Helvetica Neue',Helvetica,Arial,'PingFang SC','Hiragino Sans GB','Microsoft YaHei','WenQuanYi Micro Hei','Segoe UI',sans-serif,serif;
 	font-size: 1rem;
 	font-weight: 400;
 	line-height: 2.2;
@@ -864,7 +864,7 @@ hr {
 .timeline ul li {background:#eaeaea;list-style-type:none;position:relative;width:2px;margin-left:20px;padding:10px 0 50px;}
 .timeline ul li::after {content:'';position:absolute;left:50%;top:25px;transform:translateX(-50%);width:8px;height:8px;border-radius:50%;background:inherit;}
 .timeline ul li div {background:#eaeaea;border-radius:5px;position:relative;top:0;left:40px;width:670px;padding:8px 16px;}
-.timeline ul li div p{margin:0; letter-spacing: 1px;color: #333;}
+.timeline ul li div p{margin:0; letter-spacing: 1px;color: #333;white-space: pre-wrap;}
 .timeline ul li div small{color: rgb(91, 112, 131);font-size: 0.875em;font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;}
 .timeline ul li div::before{content:'';position:absolute;top:10px;width:0;height:0;border-style:solid;left:-15px;border-width:8px 16px 8px 0;border-color:transparent #eaeaea transparent transparent;}
 .dark-theme .timeline ul li,.dark-theme .timeline ul li div{background:#3b3d42;}
